# mircroservices-example

./: README.md  docker-compose.yaml
backend/meilisearch/: Dockerfile
backend/nginx/: Dockerfile  config.conf
backend/services/authentication-command-service/: .env  Dockerfile  package.json
backend/services/party-orchestration-service/: .env  Dockerfile  go.mod  go.sum
backend/services/party-query-service/: .env  Dockerfile  go.mod  go.sum
backend/services/party-worker-service/: .dockerignore  .env  Cargo.toml  Dockerfile
backend/services/party-worker-service/src/: datasource.rs  lib.rs  main.rs  model.rs  workers.rs
db/mongo/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-2521829320154998564.wt  collection-0-5492324571079127844.wt  collection-2-5492324571079127844.wt  collection-4-5492324571079127844.wt  collection-7-5492324571079127844.wt  index-1-2521829320154998564.wt  index-1-5492324571079127844.wt  index-3-5492324571079127844.wt  index-5-5492324571079127844.wt  index-6-5492324571079127844.wt  index-8-5492324571079127844.wt  index-9-5492324571079127844.wt  sizeStorer.wt
db/mongo/diagnostic.data/: metrics.2021-12-21T16-00-48Z-00000  (+3 more)
docs/: blee bank.postman_collection.json
mobile/: pubspec.yaml
mobile/lib/: main.dart
web/: Dockerfile.dev  package.json  tailwind.config.js
web/components/: AddButton.js  Button.js  Header.js  PartyCard.js  SignInForm.js  SignUpForm.js  TextField.js  index.js
web/hooks/: useAuth.js  useParty.js
web/pages/: _app.js  create.js  index.js  sign-up.js
web/styles/: globals.scss  main.scss
(+45 files in other folders)
