[package]
name = "party_worker_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nats = "0.16.0"
tokio = {version = "1.14.0", features = ["full"] }
dotenv = "0.15.0"
mongodb = {version = "2.0.0", default-features = false, features = ["sync"] }
serde = "1.0.132"
bson = "2.1.0"
chrono = "0.4.19"
waitgroup = "0.1.2"
serde_derive = "1.0.132"
serde_json = "1.0.73"
